feat: #CERUTF-0 Adicionar variavel do eureka para o uploader

--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -96,6 +96,7 @@ services:
       - FIREBASE_BUCKET=${FIREBASE_BUCKET}
       - FIREBASE_DOWNLOAD_URL=${FIREBASE_DOWNLOAD_URL}
       - GOOGLE_CLOUD_STORAGE_CREDENTIALS=${GOOGLE_CLOUD_STORAGE_CREDENTIALS}
+      - EUREKA_SERVER_URL=${EUREKA_SERVER_URL}
     networks:
       - microservices-network
 
